style.css
*{
    box-sizing:border-box;
}
@font-face{
    font-family:'lotrFont';
    src:url('./font/lotrFont.ttf');
}
body{
    width:100%;
    height:100vh;
    margin: 0;
    padding: 0;
    background-color:black;
}
@keyframes introAnimation{
    0%   {opacity: 0;}
    25%  {opacity: 0.05;}
    50%  {opacity: 0.2;}
    75%  {opacity: 0.5;}
    100% {opacity: 1;}
}
@keyframes beginAnimation{
    0%   {opacity: 0;}
    25%  {opacity: 0;}
    50%  {opacity: 0;}
    75%  {opacity: 0;}
    100% {opacity: 1;}
}
.introScreen{
    position:absolute;
    width:100%;
    height:100%;
    display:flex;
    justify-content:center;
    align-items:center;
    flex-direction:column;
    background-image:url(images/lotrGif.gif);
    background-repeat:no-repeat;
    background-size:100% 100%;
    z-index:102;
    font-family:'lotrFont',sans-serif;
    animation-name: introAnimation;
    animation-iteration-count: 1;
    animation-timing-function: ease-out;
    animation-duration:6s;
}
.soundButton{
    position:absolute;
    display:flex;
    justify-content:center;
    align-items: center;
    width:5%;
    height:5%;
    color:white;
    top:2%;
    right:2%;
    background-image:url(images/mute.png);
    background-repeat:no-repeat;
    background-size:70% 80%;
    cursor:pointer;
}
.soundButtonInGame{
    position:fixed;
    display:flex;
    justify-content:center;
    width:5%;
    height:5%;
    bottom:6%;
    left:16%;
    background-image:url(images/mute.png);
    background-repeat:no-repeat;
    background-size:70% 80%;
    z-index:105;
    cursor:pointer;
}
.unMute{
    position:absolute;
    display:flex;
    justify-content:center;
    align-items: center;
    width:5%;
    height:5%;
    color:white;
    top:2%;
    right:2%;
    background-image:url(images/speaker.png);
    background-repeat:no-repeat;
    background-size:70% 85%;
}
.unMuteInGame{
    position:fixed;
    display:flex;
    justify-content:center;
    width:5%;
    height:5%;
    bottom:6%;
    left:16%;
    background-image:url(images/speaker.png);
    background-repeat:no-repeat;
    background-size:70% 80%;
    z-index:105;
}
.introTitle{
    display:flex;
    justify-content:center;
    align-items:center;
    font-size:2.5em;
    color:RGB(161, 127, 26);
    animation-name: fontAnimation;
    animation-iteration-count: 1;
    animation-timing-function: ease-out;
    animation-duration:6s;
}
.exitIntroScreen{
    display:flex;
    justify-content:center;
    align-items:center;
    width:20%;
    height:20%;
    font-size:40px;
    z-index:104;
    color:white;
    margin-top:3%;
    animation-name: beginAnimation;
    animation-iteration-count: 1;
    animation-timing-function: ease-in;
    animation-duration:6s;
    background-image: url("./images/dwarfBorder.png");
    background-repeat: no-repeat;
    background-size: 100% 100%;
    cursor:pointer;
}
@keyframes fontAnimation {
    0%   {
        font-size: 0.5em;
    }
    100% {
        font-size: 2.5em;
    }
}
.aboutPage{
    position:absolute;
    width:90%;
    height:90%;
    background: rgba(0, 0, 0, 0.5);
    z-index:103;
    left: 50%;
    top:5%;
    -webkit-transform: translate(-50%, 0);
    transform: translate(-50%, 0);
    display:flex;
    display: -webkit-flex;
    -webkit-justify-content:center;
    justify-content:center;
    align-items:center;
    flex-wrap:wrap;
}
.about{
    cursor:pointer;
}
.restartGame{
    position:absolute;
    width:50%;
    height:50%;
    background: rgba(0, 0, 0, 0.5);
    z-index:115;
    left: 50%;
    top:5%;
    color:white;
    font-size:3em;
    -webkit-transform: translate(-50%, 0);
    transform: translate(-50%, 0);
    display:flex;
    justify-content:center;
    align-items:center;
    flex-direction:column;
    border:5px double grey;
    font-family:'lotrFont',sans-serif;
    background-image:url(images/ringNewGame.jpg);
    background-repeat:no-repeat;
    background-size:100% 100%;
}
.playAgainButton{
    width:25%;
    height:25%;
    border:2px double white;
    background: rgba(0, 0, 0, 0.5);
    color:white;
    font-size:0.7em;
    display:flex;
    justify-content:center;
    align-items:center;
    z-index:115;
}
.lotrDesc {
    width: 50%;
    height: 80%;
    border: 1px solid black;
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size:1.8em;
}
.howToPlay{
    position:absolute;
    width:90%;
    height:90%;
    background: rgba(0, 0, 0, 0.7);
    z-index:106;
    left: 50%;
    top:5%;
    -webkit-transform: translate(-50%, 0);
    transform: translate(-50%, 0);
    display:flex;
    justify-content:center;
    align-items:center;
    background-image:url(images/tutorial.png);
    background-repeat:no-repeat;
    background-size:100% 100%;
    border: 4px solid white;
}
.tutorial{
    cursor:pointer;
}
.exitAbout{
    display:flex;
    justify-content:center;
    align-items:center;
    position:fixed;
    width:5%;
    height:5%;
    top:0;
    right:0;
    background-color:white;
    color:black;
    font-size:40px;
    cursor:pointer;
}
.container{
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    width: 100%;
    height: 100vh;
    -webkit-flex-direction:row;
    -webkit-flex-wrap:wrap;
    flex-wrap:wrap;
    flex-direction:row;
    background-image:url(images/background.jpg);
    background-repeat:no-repeat;
    background-size:100% 100%;
    visibility:hidden
}
.rohan{
    position:fixed;
    width:30%;
    height:40%;
    left:-100px;
    overflow:hidden;
    z-index:116;
}
.chargeForward{
    -webkit-animation-name: rohanChargeForward  ; /* Chrome, Safari, Opera */
    -webkit-animation-duration:6s; /* Chrome, Safari, Opera */
    -webkit-animation-timing-function: linear;
    -webkit-animation-iteration-count: 1;
    animation-name: rohanChargeForward ;
    animation-duration: 6s;
    animation-timing-function: linear;
    animation-iteration-count: 1;
}
/* ... */

